<resources>
    <string name="sobot_restart_talk">重建会话</string>
    <string name="sobot_choice_test">选择咨询内容</string>
    <string name="sobot_clear_history_message">清空聊天记录</string>
    <string name="sobot_btn_cancle">取消</string>
    <string name="sobot_btn_submit">确定</string>
    <string name="sobot_button_send">发送</string>
    <string name="sobot_attach_take_pic">拍摄</string>
    <string name="sobot_btn_submit_text">提交</string>
    <string name="sobot_move_up_to_cancel">手指上滑，取消发送</string>
    <string name="sobot_release_to_cancel">松开手指，取消发送</string>
    <string name="sobot_up_send_calcel">松开手指 取消发送</string>
    <string name="sobot_upload">图片</string>
    <string name="sobot_choose_file">文件</string>
    <string name="sobot_location">位置</string>
    <string name="sobot_ordercard">订单</string>
    <string name="sobot_cancel">取消</string>
    <string name="sobot_prompt">提示</string>
    <string name="sobot_button_end_now">立即结束</string>
    <string name="sobot_close_session">结束本次对话？</string>
    <string name="sobot_welcome"></string>
    <string name="sobot_submit">提交</string>
    <string name="sobot_question">%1$s是否解决了您的问题？</string>
    <string name="sobot_edittext_hint">欢迎给我们的服务提建议~</string>
    <string name="sobot_dcrc">评价客服</string>
    <string name="sobot_str_bottom_message">留言</string>
    <string name="sobot_str_bottom_satisfaction">服务评价</string>
    <string name="sobot_yes">是</string>
    <string name="sobot_no">否</string>
    <string name="sobot_leavemsg">留言</string>
    <string name="sobot_leavemsg_title">留言消息</string>
    <string name="sobot_no_read">以下为未读消息</string>
    <string name="sobot_new_msg">条新消息</string>
    <string name="sobot_press_say">按住 说话</string>
    <string name="sobot_up_send">松开 发送</string>
    <string name="sobot_resendmsg">重新发送</string>
    <string name="sobot_colse">关闭</string>
    <string name="sobot_back"></string>
    <string name="sobot_no_record_audio_permission">没有麦克风权限</string>
    <string name="sobot_after_consultation_to_evaluate_custome_service">咨询后才能评价服务质量</string>
    <string name="sobot_problem">存在哪些问题</string>
    <string name="sobot_in_line">排队中...</string>
    <string name="sobot_in_line_title">排队中...</string>
    <string name="sobot_you_can">您可以</string>
    <string name="sobot_no_more_data">到顶了，没有更多</string>
    <string name="sobot_pic_size_should_be_less_than_three">图片大小需小于3M</string>
    <string name="sobot_service_accept">您好,客服  %1$s  接受了您的请求</string>
    <string name="sobot_no_access">暂无客服在线</string>
    <string name="sobot_unable_transfer_to_customer_service">暂时无法转接人工客服</string>
    <string name="sobot_thank_dialog_hint">感谢您的评价!</string>
    <string name="sobot_email_dialog_hint">您的邮箱格式错误</string>
    <string name="sobot_phone_dialog_hint">您的手机号码格式错误</string>
    <string name="sobot_leavemsg_success_hint">留言成功!\n我们将尽快联系您</string>
    <string name="sobot_leavemsg_success_tip">提交成功</string>
    <string name="sobot_outline_openNewWindows">打开新窗口</string>
    <string name="sobot_voiceTooLong">录音时间过长</string>
    <string name="sobot_str_bottom_offline">离线</string>
    <string name="sobot_voice_can_not_be_less_than_one_second">说话时间过短</string>
    <string name="sobot_count_down">倒计时:</string>
    <string name="sobot_reunicon">点击重新连接</string>
    <string name="sobot_read_all">查看详情</string>
    <string name="sobot_ctrl_v_success">复制成功！</string>
    <string name="sobot_ctrl_copy">复制</string>
    <string name="sobot_network_unavailable">当前网络不可用，请检查您的网络设置</string>
    <string name="sobot_save_pic">保存图片</string>
    <string name="sobot_scan_qr_code">识别二维码</string>
    <string name="sobot_outline_leverByManager">您好,本次会话已结束</string>
    <string name="sobot_current_network">当前网络不可用,请检查网络设置</string>
    <string name="sobot_completed_the_evaluation">您已完成评价</string>
    <string name="sobot_already_save_to_picture">已保存到系统相册</string>
    <string name="sobot_unable_to_evaluate">暂时无法评价</string>
    <string name="sobot_data_wrong_hint">数据错误</string>
    <string name="sobot_server_request_wrong">服务器请求错误！</string>
    <string name="sobot_no_write_external_storage_permission">没有存储权限</string>
    <string name="sobot_did_not_get_picture_path">未获取图片的地址</string>
    <string name="sobot_pic_select_again">请重新选择或拍摄</string>
    <string name="sobot_init_data_is_null">初始化参数不能为空</string>
    <string name="sobot__is_null">不能为空</string>
    <string name="sobot_appkey_is_null">您的AppKey为空</string>
    <string name="sobot_sysnum_is_null">您的Sysnum为空</string>
    <string name="sobot_already_transfer_to_customer_service">您已经转人工</string>
    <string name="sobot_consulting_title">[标题]</string>
    <string name="sobot_consulting_describe">[摘要]</string>
    <string name="sobot_consulting_lable">[标签]</string>
    <string name="sobot_consulting_fromurl">[链接]</string>
    <string name="sobot_post_msg_hint_enclosure">上传问题图片能大大提高解决问题效率</string>
    <string name="sobot_temporarily_not_evaluation">暂不评价</string>
    <string name="sobot_color_custom_name">#ACB5C4</string>
    <string name="sobot_no_camera_permission">没有相机权限</string>
    <string name="sobot_sdcard_does_not_exist">没有sd卡</string>
    <string name="sobot_conntype_unconnected">未连接</string>
    <string name="sobot_conntype_in_connection">连接中...</string>
    <string name="sobot_conntype_connect_success">连接成功</string>
    <string name="sobot_required">（必填）</string>
    <string name="sobot_optional">（选填）</string>
    <string name="sobot_what_are_the_problems">存在以下哪些问题</string>
    <string name="sobot_robot_customer_service_evaluation">机器人客服评价</string>
    <string name="sobot_evaluation_completed_exit">提交评价后会话将结束</string>
    <string name="sobot_delete">删除</string>
    <string name="sobot_choice_form_picture">选择图片</string>
    <string name="sobot_choice_form_vedio">选择视频</string>
    <string name="sobot_loading">请稍候</string>
    <string name="sobot_robot_like">感谢您的反馈</string>
    <string name="sobot_robot_dislike">很抱歉没能帮到您</string>
    <string name="sobot_evaluate_yes">已解决</string>
    <string name="sobot_evaluate_no">未解决</string>
    <string name="sobot_please_evaluate">%1$s邀请您对本次服务进行评价</string>
    <string name="sobot_please_evaluate_this_service">服务评价</string>
    <string name="sobot_the_label_is_required">标签为必选</string>
    <string name="sobot_suggestions_are_required">建议为必填</string>
    <string name="sobot_wait_full">排队已满</string>
    <string name="sobot_robot_voice_hint">机器人咨询模式下，语音将自动转化为文字发送</string>
    <string name="sobot_robot_question_hint"></string>
    <string name="sobot_service_question_hint"></string>
    <string name="sobot_robot_voice_max_hint">语音转文字服务暂时中止，建议您用文字或转人工交流</string>
    <string name="sobot_problem_description">问题描述</string>
    <string name="sobot_problem_types">问题分类</string>
    <string name="sobot_email">邮箱</string>
    <string name="sobot_phone">手机</string>
    <string name="sobot_try_again">网络错误，请检查网络后重试</string>
    <string name="sobot_please_load">请上传附件</string>
    <string name="sobot_consultation_list">消息中心</string>
    <string name="sobot_more">展开更多</string>
    <string name="sobot_collapse">收起全部</string>
    <string name="sobot_switch_business">切换业务</string>
    <string name="sobot_switch_robot_title">请选择要咨询的业务</string>
    <string name="sobot_connecting_customer_service">正在连接人工客服</string>
    <string name="sobot_retracted_msg_tip">客服 %1$s 撤回了一条消息</string>
    <string name="sobot_ding_cai_sessionoff">会话结束，无法反馈</string>
    <string name="sobot_ding_cai_like">感谢您的支持</string>
    <string name="sobot_ding_cai_dislike">我会努力学习，希望下次帮到您</string>
    <string name="sobot_transfer_to_customer_service">转人工</string>
    <string name="sobot_ding_cai_yes"></string>
    <string name="sobot_ding_cai_no"></string>
    <string name="sobot_internal_memory">内部存储</string>
    <string name="sobot_files_selected">已选择:%1$s</string>
    <string name="sobot_file_preview">文件预览</string>
    <string name="sobot_file_size">文件大小:%1$s</string>
    <string name="sobot_file_downloading">正在下载中…(%1$s/%2$s)</string>
    <string name="sobot_file_download">立即下载</string>
    <string name="sobot_file_open">用其他应用打开</string>
    <string name="sobot_file_open_decribe">暂时无法打开此类文件，可使用其他应用打开浏览</string>
    <string name="sobot_file_upload_failed">不能上传20m以上的文件</string>
    <string name="sobot_file_upload_failed_unknown_format">不能上传此格式的文件</string>
    <string name="sobot_notification_name">客服通知</string>
    <string name="sobot_cannot_open_file">您的手机无法打开此文件</string>
    <string name="sobot_notification_tip">客服%1$s:%2$s</string>
    <string name="sobot_notification_tip_title">客服提示</string>
    <string name="sobot_choice_business">请选择要留言的业务</string>
    <string name="sobot_empty_data">暂无相关信息</string>
    <string name="sobot_created">待受理</string>
    <string name="sobot_created_1">已创建</string>
    <string name="sobot_processing">受理中</string>
    <string name="sobot_completed">已完成</string>
    <string name="sobot_ticket_code">工单号:%1$s</string>
    <string name="sobot_message_details">留言详情</string>
    <string name="sobot_new_ticket_info">您的留言状态有</string>
    <string name="sobot_new_ticket_info_update">更新</string>
    <string name="sobot_robot_auto_transfer_tip">对不起，未能解决您的问题，正在为您转接人工客服</string>
    <string name="sobot_message_record">留言记录</string>
    <string name="sobot_notice_expand">展开</string>
    <string name="sobot_notice_collapse">收起</string>
    <string name="sobot_help_center_title">客户服务中心</string>
    <string name="sobot_help_center_no_data">暂无帮助内容</string>
    <string name="sobot_help_center_no_data_describe">可点击下方按钮咨询人工客服</string>
    <string name="sobot_help_center_online_service">在线客服</string>
    <string name="sobot_problem_detail_title">问题详情</string>
    <string name="sobot_clear_his_msg_describe">清空记录将无法恢复,是否要清空历史记录？</string>
    <string name="sobot_clear_his_msg_empty">清空</string>
    <string name="sobot_switch">换一组</string>
    <string name="sobot_please_leave_a_message">请您留言</string>
    <string name="sobot_tap_hold_camera">轻触拍照，按住摄像</string>
    <string name="sobot_choice_classification">选择分类</string>
    <string name="sobot_no_empty">不能为空</string>
    <string name="sobot_can">可</string>
    <string name="sobot_douhao"> , </string>
    <string name="sobot_search">搜索...</string>
    <string name="sobot_cancle_conversation">结束会话</string>
    <string name="sobot_temporary_leave">暂时离开</string>
    <string name="sobot_will_end_conversation">您是否要结束会话?</string>
    <string name="sobot_leave_msg_title">标题</string>
    <string name="leaveMsgGuide"></string>
    <string name="leaveMsgTemplate"></string>
    <string name="sobot_leaveMsg_create_success">提交成功</string>
    <string name="sobot_leaveMsg_create_success_des">我们将会以链接的形式在会话中向你反馈工单处理状态</string>
    <string name="sobot_leaveMsg_create_complete">完成</string>
    <string name="sobot_leaveMsg_to_ticket">前往留言记录</string>
    <string name="sobot_ticket_status_create">已创建</string>
    <string name="sobot_ticket_question_des">问题描述:</string>
    <string name="sobot_ticket_expand">查看更多</string>
    <string name="sobot_title_date">日期</string>
    <string name="sobot_please_input">请输入</string>
    <string name="sobot_title_time">时间</string>
    <string name="sobot_remind_color">#FFACB5C4</string>
    <string name="sobot_switch_robot_title_2">请选择要咨询的内容</string>
    <string name="sobot_line_transfinite_def_hint">抱歉,人工排队已满,请您留言,我们有专项工作人员直接处理您提交的问题~</string>
    <string name="sobot_only_can_write">只能输入</string>
    <string name="sobot_char_length">个字符</string>
    <string name="sobot_number_english_china">数字、英文、汉字</string>
    <string name="sobot_no_permission_text">您还没有授权相关权限</string>
    <string name="sobot_go_setting">去设置</string>
    <string name="sobot_upload_vodie_length">上传视频长度不能超过15s</string>
    <string name="sobot_input_type_err">输入的格式错误</string>
    <string name="sobot_order_not_empty">订单编号不能为空</string>
    <string name="sobot_order_status_1">待付款</string>
    <string name="sobot_great_satisfaction">非常满意</string>
    <string name="sobot_rating_score">评分：</string>
    <string name="sobot_rating_dec">评语：</string>
    <string name="sobot_my_service_comment">我的服务评价</string>
</resources>