<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="260dp"
        android:layout_height="130dp"
        android:layout_centerInParent="true"
        android:background="@drawable/sobot_doalig_bg_style"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="84dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/sobot_will_end_conversation"
            android:textColor="#515a7c"
            android:textSize="17sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dip"
            android:background="#d9d9d9" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sobot_btn_cancle_conversation"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:padding="5dp"
                android:gravity="center"
                android:text="@string/sobot_cancle_conversation"
                android:textColor="@color/sobot_color"
                android:textSize="15sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#f0f0f0" />

            <Button
                android:id="@+id/sobot_btn_temporary_leave"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:padding="5dp"
                android:gravity="center"
                android:text="@string/sobot_temporary_leave"
                android:textColor="@color/sobot_color"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
