<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/sobot_common_bg" />


    <LinearLayout
        android:id="@+id/sobot_my_evaluate_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sobot_white"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:background="@color/sobot_line_1dp" />

        <TextView
            android:id="@+id/sobot_my_evaluate_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/sobot_white"
            android:paddingLeft="20dp"
            android:paddingTop="16dp"
            android:paddingRight="20dp"
            android:text="@string/sobot_my_service_comment"
            android:textColor="#455C73"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/sobot_ll_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="7dp"
            android:background="@color/sobot_white"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sobot_rating_score"
                android:textColor="@color/sobot_common_gray"
                android:textSize="12sp" />

            <RatingBar
                android:id="@+id/sobot_ratingBar"
                style="@style/sobot_small_roomRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="12dp"
                android:layout_gravity="center_vertical"
                android:numStars="5"
                android:rating="5"
                android:stepSize="0.5"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sobot_ll_remark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@color/sobot_white"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sobot_rating_dec"
                android:textColor="@color/sobot_common_gray"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/sobot_tv_remark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/sobot_common_gray"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:layout_marginTop="16dp"
            android:background="@color/sobot_line_1dp" />
    </LinearLayout>


</LinearLayout>